--- a/src/views/app/index.less
+++ b/src/views/app/index.less
@@ -8,4 +8,13 @@ html, body {
     width: 100%;
     height: 100%;
   }
+
+  .ant-modal-mask, .ant-modal-wrap {
+    z-index: 1040;
+  }
+
+  .ant-message {
+    z-index: 1050;
+  }
 }
+
