--- a/src/views/app/components/ImgPopover/index.module.less
+++ b/src/views/app/components/ImgPopover/index.module.less
@@ -1,6 +1,5 @@
 .container {
   width: 540px;
-  box-sizing: border-box;
   font-size: 13px;
 
   .uploadContainer {
@@ -130,6 +129,13 @@
       }
 
       .imgItem {
+        display: inline-flex;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+
         .img {
           display: block;
           max-width: 100%;
