--- a/src/views/app/app.module.less
+++ b/src/views/app/app.module.less
@@ -1,35 +1,7 @@
 .container {
   width: 100%;
   height: 100%;
-
-  .header {
-    height: 50px;
-    line-height: 50px;
-    display: flex;
-    align-items: center;
-
-    .nav {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-
-      .nav_text_btn, .nav_img_btn {
-        margin-right: 1px;
-      }
-    }
-
-    .header_save_btn {
-      margin-right: 20px;
-    }
-  }
-}
-
-:global {
-  .nav_text_divider {
-    margin: 10px 0!important;
-  }
-
-  .nav_text_h {
-    cursor: pointer;
-  }
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
